--- a/src/Services/Customer/Customer.Infrastructure/Customer.Infrastructure.csproj
+++ b/src/Services/Customer/Customer.Infrastructure/Customer.Infrastructure.csproj
@@ -6,4 +6,23 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.18">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.18" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Customer.Application\Customer.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Persistance\Configurations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Persistance\Configurations\" />
+  </ItemGroup>
 </Project>
