--- a/src/Services/Customer/Customer.Api/Customer.Api.csproj
+++ b/src/Services/Customer/Customer.Api/Customer.Api.csproj
@@ -15,6 +15,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Customer.Infrastructure\Customer.Infrastructure.csproj" />
+    <ProjectReference Include="..\Customer.Application\Customer.Application.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
