--- a/src/Services/Customer/Customer.Infrastructure/Customer.Infrastructure.csproj
+++ b/src/Services/Customer/Customer.Infrastructure/Customer.Infrastructure.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,8 +20,10 @@
 
   <ItemGroup>
     <None Remove="Persistance\Configurations\" />
+    <None Remove="Repository\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Persistance\Configurations\" />
+    <Folder Include="Repository\" />
   </ItemGroup>
 </Project>
