--- a/src/Services/Customer/Customer.Api/Customer.Api.csproj
+++ b/src/Services/Customer/Customer.Api/Customer.Api.csproj
@@ -14,16 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Customer.Infrastructure\Customer.Infrastructure.csproj" />
-    <ProjectReference Include="..\Customer.Application\Customer.Application.csproj">
-      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
-    </ProjectReference>
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Customer.Infrastructure\Customer.Infrastructure.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
