--- a/src/Services/Order/Order.Infrastructure/Order.Infrastructure.csproj
+++ b/src/Services/Order/Order.Infrastructure/Order.Infrastructure.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Order.Application\Order.Application.csproj" />
+  </ItemGroup>
 </Project>
