feat(order): add db context

--- a/src/Services/Order/Order.Domain/Order.Domain.csproj
+++ b/src/Services/Order/Order.Domain/Order.Domain.csproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Model\" />
+    <None Remove="Enum\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="Enum\" />
+  </ItemGroup>
 </Project>
