--- a/src/Services/Payment/Payment.Api/Payment.Api.csproj
+++ b/src/Services/Payment/Payment.Api/Payment.Api.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Payment.Infrastructure\Payment.Infrastructure.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
