--- a/src/Services/Payment/Payment.Infrastructure/Payment.Infrastructure.csproj
+++ b/src/Services/Payment/Payment.Infrastructure/Payment.Infrastructure.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Payment.Application\Payment.Application.csproj" />
+  </ItemGroup>
 </Project>
