chore(product): add project reference

--- a/src/Services/Product/Product.Api/Product.Api.csproj
+++ b/src/Services/Product/Product.Api/Product.Api.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Product.Infrastructure\Product.Infrastructure.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
