--- a/src/Services/Product/Product.Infrastructure/Product.Infrastructure.csproj
+++ b/src/Services/Product/Product.Infrastructure/Product.Infrastructure.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Product.Application\Product.Application.csproj" />
+  </ItemGroup>
 </Project>
