--- a/src/Services/Payment/Payment.Infrastructure/Payment.Infrastructure.csproj
+++ b/src/Services/Payment/Payment.Infrastructure/Payment.Infrastructure.csproj
@@ -17,4 +17,14 @@
   <ItemGroup>
     <ProjectReference Include="..\Payment.Application\Payment.Application.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Persistance\" />
+    <None Remove="Repository\" />
+    <None Remove="Persistance\Configurations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Persistance\" />
+    <Folder Include="Repository\" />
+    <Folder Include="Persistance\Configurations\" />
+  </ItemGroup>
 </Project>
